Fix: correction couleur pour contrast

--- a/public/assets/scss/utils/_colors.scss
+++ b/public/assets/scss/utils/_colors.scss
@@ -2,5 +2,5 @@ $bs-pink: #f2937e;
 $bs-lightPink: #f2b8a2;
 $bs-darkgreen: #536102;
 $bs-green: #d6d9bf;
-$bs-brown: #734d3f;
+$bs-brown: #54352a;
 $bs-white: #f2eadf;
